--- a/zadanie2/composer.json
+++ b/zadanie2/composer.json
@@ -13,6 +13,7 @@
         "doctrine/orm": "^2.20",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.1",
+        "sensio/framework-extra-bundle": "^6.2",
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
         "symfony/doctrine-messenger": "5.4.*",
